add Get user profile by username, polish other management endpoints
