# handlers/users.js
@@ -7,8 +7,37 @@ const managementApiServiceUrl = process.env.MANAGEMENT_API_SERVICE_URL || "";
 
 // User management api handlers
 const UserHandlers = {
+    async getUserProfileByUsername(req, res, next) {
+        const username = req.body.username;
+
+        // create a signed JWT 
+        token = generateToken("users.retrieve");
+
+        // make a request to LoginID Management API
+        try {
+            let response = await fetch(managementApiServiceUrl + `/manage/users/get`, {
+                method: "post",
+                headers: getHeaders(token),
+                body: JSON.stringify({ username })
+            });
+
+            // check whether something went wrong 
+            let jsonResponse = await response.json();
+            if (response.ok) {
+                return res.status(200).json(jsonResponse);
+            } else {
+                return res.status(response.status).json({ code: jsonResponse.code, message: jsonResponse.message });
+            }
+
+        } catch(err) {
+            console.log(err);
+            return res.status(500).json(err);
+        }
+    },
+
     async updateUser(req, res, next) {
         const userID = req.params.user_id;
+        const username = req.body.username;
 
         // create a signed JWT 
         token = generateToken("users.update");
@@ -18,7 +47,7 @@ const UserHandlers = {
             let response = await fetch(managementApiServiceUrl + `/manage/users/${userID}`, {
                 method: "put",
                 headers: getHeaders(token),
-                body: JSON.stringify(req.body)
+                body: JSON.stringify({ username })
             });
 
             let jsonResponse = await response.json();
@@ -136,8 +165,9 @@ const UserHandlers = {
         // make a request to LoginID Management API
         try {
             let response = await fetch(managementApiServiceUrl + `/manage/users/delete`, {
-                method: "delete",
+                method: "post",
                 headers: getHeaders(token),
+                body: JSON.stringify({ username })
             });
 
             // user record is successfully deleted
